# rust-rest

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml
local/: docker-compose.yml
migrations/2025-03-23-044033_create_users/: up.sql
resources/sql/: 01_init.sql
src/: main.rs
src/domains/: schema.rs
src/domains/models/: user.rs
