[package]
name = "rust-rest"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "2", features = ["full"] }
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
rust_decimal = { version = "1.36.0", features = ["serde-with-arbitrary-precision", "serde-with-float", "serde-with-str"] }
tokio =  { version = "1.44.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-uuid-0_8", "with-uuid-1"] }
dotenv = "0.15.0"
diesel = { version = "2.2.8", features = ["postgres", "chrono", "serde_json", "uuid"] }
diesel-async = { version =  "0.5.2", features = ["postgres", "bb8", "async-connection-wrapper"] }
